[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/parchment.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 976.0
margin_bottom = 463.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.482353, 0.219608, 0.219608, 1 )
custom_colors/font_outline_modulate = Color( 0.741176, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0.827451, 0, 0, 1 )
custom_constants/shadow_as_outline = 4
text = "LOONY LIPS"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 467.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 10
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.898039, 0.737255, 0.407843, 1 )
self_modulate = Color( 0.917647, 0.8, 0.498039, 1 )
margin_right = 788.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 798.0
margin_right = 883.0
margin_bottom = 85.0
rect_min_size = Vector2( 85, 85 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 893.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OK"

[node name="Storybook" type="Node" parent="."]

[node name="Story 0" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "name of village", "name of building", "name of family" )
story = "The villagers of %s still called it ‘%s', even though it had been many years since the %s had lived there."

[node name="Story 1" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "qwdqw", "fefe", "qwsqw", "ewffcwe" )
story = "The %s villewfeagers of %s still called it ‘%s', even though it had been many years since the %s had lived there."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_InputText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
